--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,12 +11,20 @@
     apply:
       tags:
         - binenv
-  when: not __binenv.stat.exists or binenv_force_install
+  when: not __binenv.stat.exists
   tags:
     - always
 
 - include_tasks:
     file: environment.yml
+    apply:
+      tags:
+        - binenv
+  tags:
+    - always
+
+- include_tasks:
+    file: binaries.yml
     apply:
       tags:
         - binenv
