--- a/tasks/binaries.yml
+++ b/tasks/binaries.yml
@@ -1,4 +1,4 @@
 ---
 - name: Install required binaries
   command: binenv -g install {{ item.key }} {{ item.value | regex_replace("latest","", ignorecase=True) }}
-  loop: "{{ binenv_binaries }}"
+  loop: "{{ binenv_binaries | dict2items }}"
