--- a/tasks/binaries.yml
+++ b/tasks/binaries.yml
@@ -3,4 +3,4 @@
   command: binenv -g install {{ item.key }} {{ item.value | regex_replace("latest","", ignorecase=True) }}
   loop: "{{ binenv_binaries | dict2items }}"
   register: __binenv_install
-  changed_when: '"already installed" not in __binenv_install.stdout'
+  changed_when: '"already installed" not in __binenv_install.stderr'
